--- a/Blazor/Components/Pages/Home.razor
+++ b/Blazor/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using BlazorMonaco
 
 <PageTitle>Home</PageTitle>
 
@@ -21,7 +22,10 @@
     {
         <p class="error-message">Der er ikke oprettet en forbindelse til databasen</p>
     }
+
+
 </div>
+
 
 @code {
 
