--- a/Blazor/Components/_Imports.razor
+++ b/Blazor/Components/_Imports.razor
@@ -16,3 +16,7 @@
 @using Blazor.Components.Layout
 @inject DBService DBService
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage;
+@using BlazorMonaco
+@using BlazorMonaco.Editor
+@using BlazorMonaco.Languages
+@using Blazor.Components.BlazorComponents
